# G.A.N.G.U

./: README.md  pyproject.toml  report.md
src/agents/: Calling.py  Calling_Ai.py  buying_agent.py  crew.py  face_recognize.py  file_to_text.py  main.py  pharmacy_session.json  speech_to_text.py  text_to_speech.py
src/agents/config/: agents.yaml  file_agent.yaml  file_task.yaml  speech_agent.yaml  speech_task.yaml  tasks.yaml
src/agents/medical_memory/Member_0001/: .crewai_user.json  latest_kickoff_task_outputs.db  long_term_memory_storage.db
src/agents/tools/: custom_tool.py
